--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,12 @@ biliup
 xhs
 qrcode
 loguru
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.0
+python-multipart==0.0.9
+schedule
+
+DingtalkChatbot
+aiohttp==3.9.3
+asyncio==3.4.3
